Edit settings - flush target to test server

--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,15 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>3.2.0</version>
+                <configuration>
+                    <outputDirectory>C:\Users\apels\Desktop\Folders\SERVER Purpur 1.17 almost empty\plugins</outputDirectory>
+                </configuration>
+            </plugin>
         </plugins>
         <resources>
             <resource>
