--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>me.user0481</groupId>
     <artifactId>itemRename</artifactId>
-    <version>1.17.1.05</version>
+    <version>1.19.3.05</version>
     <packaging>jar</packaging>
 
     <name>ItemRename</name>
@@ -24,8 +24,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
-                    <source>15</source>
-                    <target>15</target>
+                    <source>17</source>
+                    <target>17</target>
                 </configuration>
             </plugin>
             <plugin>
@@ -50,7 +50,7 @@
                 <artifactId>maven-jar-plugin</artifactId>
                 <version>3.2.0</version>
                 <configuration>
-                    <outputDirectory>C:\Users\apels\Desktop\Folders\SERVER Purpur 1.17 almost empty\plugins</outputDirectory>
+                    <outputDirectory>C:\Users\apels\Desktop</outputDirectory>
                 </configuration>
             </plugin>
         </plugins>
@@ -77,7 +77,7 @@
         <dependency>
             <groupId>org.spigotmc</groupId>
             <artifactId>spigot-api</artifactId>
-            <version>1.17.1-R0.1-SNAPSHOT</version>
+            <version>1.19.3-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
